fix quote data
